--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "homepage": "http://status.ruzuku.com",
   "dependencies": {
     "gh-pages": "^1.0.0",
+    "hoek": "^4.2.0",
     "moment": "^2.18.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
