--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "homepage": "http://status.ruzuku.com",
   "dependencies": {
     "gh-pages": "^1.0.0",
-    "hoek": "^4.2.0",
+    "hoek": "^4.2.1",
+    "lodash": "^4.17.5",
     "moment": "^2.18.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "sshpk": "^1.13.2",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
